# mice_for_cats

./: .gitignore  .gitmodules  IMPLEMENTATION_REPORT.md  README.md  env.template  pyproject.toml
paper/: .gitignore  README.md  example_usage.py  log.txt  pyproject.toml
paper/json/: mice_for_cats.json  mice_for_cats_cleaned.json
paper/mice/: __init__.py  __main__.py  confidence.py  data.py  feature_extraction.py  metrics.py  models.py  train.py
paper/temp/: mice_for_cats.tei.xml
paper2code_output/: data_preprocessing.py_simple_analysis_response.json  data_preprocessing.py_simple_analysis_trajectories.json  evaluation.py_simple_analysis_response.json  evaluation.py_simple_analysis_trajectories.json  main.py_simple_analysis_response.json  main.py_simple_analysis_trajectories.json  model.py_simple_analysis_response.json  model.py_simple_analysis_trajectories.json  planning_config.yaml  planning_response.json  planning_trajectories.json  trainer.py_simple_analysis_response.json  trainer.py_simple_analysis_trajectories.json  utils.py_simple_analysis_response.json  utils.py_simple_analysis_trajectories.json
paper2code_output/analyzing_artifacts/: data_preprocessing.py_simple_analysis.txt  evaluation.py_simple_analysis.txt  main.py_simple_analysis.txt  model.py_simple_analysis.txt  trainer.py_simple_analysis.txt  (+1 more)
paper2code_repo/: evaluation.py  model.py  utils.py
results/: log_meta_llama_Llama_3.2_3B_Instruct_20251208_063310.txt  results_meta_llama_Llama_3.2_3B_Instruct_20251208_063310.json
scripts/: run_pipeline.py  run_zero_shot.py
src/: __init__.py  config.py
(+31 files in other folders)
