[project]
name = "mice-for-cats"
version = "0.1.0"
description = "Model-Internal Confidence Estimators for Calibrating Agents with Tools"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "bert-score>=0.3.13",
    "sentence-transformers>=2.2.2",
    "accelerate>=0.20.0",
    "tqdm>=4.65.0",
    "fire>=0.5.0",
    "matplotlib>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mice"]

[tool.uv]
dev-dependencies = []

